--- a/credit-card-dataset-svm-classification.ipynb
+++ b/credit-card-dataset-svm-classification.ipynb
@@ -9,9 +9,9 @@
    "source": [
     "@ Authors:\n",
     "\n",
-    "LE BORGNE Pierre-Alexis :https://www.kaggle.com/pierra\n",
+    "Ankush Kumar Lohanihttps://www.linkedin.com/in/iamakl/",
     "\n",
-    "GUILLAUME Florian : https://www.kaggle.com/florianguillaume"
+    "Enjoy the Code!"
    ]
   },
   {
