--- a/credit-card-dataset-svm-classification.ipynb
+++ b/credit-card-dataset-svm-classification.ipynb
@@ -7,11 +7,11 @@
     "_uuid": "95e1df618273182dce3c07c4e5d316c6a54f08cf"
    },
    "source": [
-    "@ Authors:\n",
+    "@ Author:\n",
     "\n",
     "Ankush Kumar Lohanihttps://www.linkedin.com/in/iamakl/",
     "\n",
-    "Enjoy the Code!"
+    "Enjoy the Code!\n"
    ]
   },
   {
